--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body class="manrope">
 
-    <header class=" grid sm:grid-cols-1 lg:grid-cols-2 xl:grid-cols-2 2xl:grid-cols-2 container mx-auto items-center text-center sm:text-center md:text-center lg:text-left xl:text-left 2xl:text-left">
+    <header class=" grid sm:grid-cols-1 lg:grid-cols-2 xl:grid-cols-2 2xl:grid-cols-2 container mx-auto items-center text-center sm:text-center md:text-center lg:text-left xl:text-left 2xl:text-left ">
         <div class="header-details">
             <h1 class="text-6xl font-bold mb-2">It's good  <br>tea time at The <br> Tea House</h1>
             <p class="text-[#777777] mb-2">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.</p>
@@ -20,8 +20,17 @@
                 Explore More
             </button>
         </div>
-        <div class="header-img">
-            <img src="./images/banner.png" alt="">
+        <div class="header-img relative ">
+           <div class="flex justify-center"> <img src="./images/banner.png" alt="" class="mx-auto"></div>
+            <div class="rating-section flex max-w-[300px] p-3 bg-white rounded-2xl gap-2 absolute top-105 left-[200px] shadow-xl">
+                <div>
+                    <img src="./images/Group 5.png" alt="">
+                </div>
+                <div>
+                    <h1>5.00</h1>
+                    <p>Trust Pilot Ratings</p>
+                </div>
+            </div>
         </div>
     </header>
 
