header section completed

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
      <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
 <body class="manrope">
+<!-- ============================================================= Header Section starts here ===================================================== -->
 
     <header class=" grid sm:grid-cols-1 lg:grid-cols-2 xl:grid-cols-2 2xl:grid-cols-2 container mx-auto items-center text-center sm:text-center md:text-center lg:text-left xl:text-left 2xl:text-left ">
         <div class="header-details">
@@ -22,7 +23,7 @@
         </div>
         <div class="header-img relative ">
            <div class="flex justify-center"> <img src="./images/banner.png" alt="" class="mx-auto"></div>
-            <div class="rating-section flex max-w-[300px] p-3 bg-white rounded-2xl gap-2 absolute top-105 left-[200px] shadow-xl">
+            <div class="rating-section flex max-w-[300px] p-3 bg-white rounded-2xl gap-2 absolute shadow-xl 2xl:top-105 2xl:left-[200px] xl:top-105  lg:top-80 lg:left-[150px] md:top-100 md:left-55 sm:top-100 sm:left-40 top-90 left-40">
                 <div>
                     <img src="./images/Group 5.png" alt="">
                 </div>
@@ -33,6 +34,8 @@
             </div>
         </div>
     </header>
+
+ <!-- ============================================================= Header Section ends here ====================================================== -->
 
 
 
