--- a/index.html
+++ b/index.html
@@ -37,7 +37,38 @@
 
  <!-- ============================================================= Header Section ends here ====================================================== -->
 
+   <section class="section container mx-auto text-center mt-9 p-26">
+     <h1 class="text-6xl font-bold my-4">Our Featured Products</h1>
+     <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
 
+     <div class="cards mt-6 2xl:flex gap-9 2xl:justify-between " >
+
+            <div class="card w-[270px] text-center px-[40px] py-[30px] space-y-4 bg-linear-to-b from-gray-200 to-white">
+                <img src="./images/tea-1.png" alt="" class="mx-auto">
+                <h1 class="text-2xl font-bold">Milk Tea</h1>
+                <p>Creamer could be replaced by fresh milk</p>
+            </div>
+
+            <div class="card w-[270px] text-center px-[40px] py-[30px] space-y-4 bg-linear-to-b from-gray-200 to-white">
+                <img src="./images/tea-2.png" alt="" class="mx-auto">
+                <h1 class="text-2xl font-bold">Black Tea</h1>
+                <p>Creamer could be replaced by fresh milk</p>
+            </div>
+
+            <div class="card w-[270px] text-center px-[40px] py-[30px] space-y-4 bg-linear-to-b from-gray-200 to-white">
+                <img src="./images/tea-3.png" alt="" class="mx-auto">
+                <h1 class="text-2xl font-bold">Lemon Tea</h1>
+                <p>Creamer could be replaced by fresh milk</p>
+            </div>
+
+            <div class="card w-[270px] text-center px-[40px] py-[30px] space-y-4 bg-linear-to-b from-gray-200 to-white">
+                <img src="./images/tea-4.png" alt="" class="mx-auto">
+                <h1 class="text-2xl font-bold">Green Tea</h1>
+                <p>Creamer could be replaced by fresh milk</p>
+            </div>
+            
+     </div>
+   </section>
 
    
 </body>
