--- a/index.html
+++ b/index.html
@@ -13,17 +13,18 @@
 <body class="manrope">
 <!-- ============================================================= Header Section starts here ===================================================== -->
 
-    <header class=" grid sm:grid-cols-1 lg:grid-cols-2 xl:grid-cols-2 2xl:grid-cols-2 container mx-auto items-center text-center sm:text-center md:text-center lg:text-left xl:text-left 2xl:text-left ">
+    <header class=" grid sm:grid-cols-1 lg:grid-cols-2 xl:grid-cols-2 2xl:grid-cols-2 container mx-auto items-center text-center sm:text-center md:text-center lg:text-left xl:text-left 2xl:text-left p-9 ">
         <div class="header-details">
             <h1 class="text-6xl font-bold mb-2">It's good  <br>tea time at The <br> Tea House</h1>
-            <p class="text-[#777777] mb-2">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.</p>
+            <p class="text-[#777777] mb-2">Tea and Botanical Solutions Supplier Give Optimum <br> Satisfaction To Your Taste Buds.</p>
             <button class="py-2 px-6 my-2  bg-linear-to-r from-orange-400 to-red-500 text-amber-50 rounded-md">
                 Explore More
             </button>
         </div>
         <div class="header-img relative ">
            <div class="flex justify-center"> <img src="./images/banner.png" alt="" class="mx-auto"></div>
-            <div class="rating-section flex max-w-[300px] p-3 bg-white rounded-2xl gap-2 absolute shadow-xl 2xl:top-105 2xl:left-[200px] xl:top-105  lg:top-80 lg:left-[150px] md:top-100 md:left-55 sm:top-100 sm:left-40 top-90 left-40">
+
+            <div class="rating-section flex max-w-[300px] p-3 bg-white rounded-2xl gap-2 absolute shadow-xl 2xl:top-105 2xl:left-[200px] xl:top-105  lg:top-80 lg:left-[150px] md:top-100 md:left-55 sm:top-100 sm:left-40 top-50 left-10">
                 <div>
                     <img src="./images/Group 5.png" alt="">
                 </div>
@@ -37,31 +38,36 @@
 
  <!-- ============================================================= Header Section ends here ====================================================== -->
 
-   <section class="section container mx-auto text-center mt-9 p-26">
+
+
+
+
+
+   <section class="section container mx-auto text-center mt-9 p-4">
      <h1 class="text-6xl font-bold my-4">Our Featured Products</h1>
      <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
 
-     <div class="cards mt-6 2xl:flex gap-9 2xl:justify-between " >
+     <div class="cards max-w-[1300px] mx-auto my-6 grid grid-cols-1 gap-19 xl:grid-cols-4 lg:grid-cols-2 md:grid-cols-2 sm:grid-cols-2" >
 
-            <div class="card w-[270px] text-center px-[40px] py-[30px] space-y-4 bg-linear-to-b from-gray-200 to-white">
+            <div class="card w-[270px] text-center mx-auto px-[40px] py-[30px] space-y-4 bg-linear-to-b from-gray-200 to-white">
                 <img src="./images/tea-1.png" alt="" class="mx-auto">
                 <h1 class="text-2xl font-bold">Milk Tea</h1>
                 <p>Creamer could be replaced by fresh milk</p>
             </div>
 
-            <div class="card w-[270px] text-center px-[40px] py-[30px] space-y-4 bg-linear-to-b from-gray-200 to-white">
+            <div class="card w-[270px] text-center mx-auto px-[40px] py-[30px] space-y-4 bg-linear-to-b from-gray-200 to-white">
                 <img src="./images/tea-2.png" alt="" class="mx-auto">
                 <h1 class="text-2xl font-bold">Black Tea</h1>
                 <p>Creamer could be replaced by fresh milk</p>
             </div>
 
-            <div class="card w-[270px] text-center px-[40px] py-[30px] space-y-4 bg-linear-to-b from-gray-200 to-white">
+            <div class="card w-[270px] text-center mx-auto px-[40px] py-[30px] space-y-4 bg-linear-to-b from-gray-200 to-white">
                 <img src="./images/tea-3.png" alt="" class="mx-auto">
                 <h1 class="text-2xl font-bold">Lemon Tea</h1>
                 <p>Creamer could be replaced by fresh milk</p>
             </div>
 
-            <div class="card w-[270px] text-center px-[40px] py-[30px] space-y-4 bg-linear-to-b from-gray-200 to-white">
+            <div class="card w-[270px] text-center mx-auto  px-[40px] py-[30px] space-y-4 bg-linear-to-b from-gray-200 to-white">
                 <img src="./images/tea-4.png" alt="" class="mx-auto">
                 <h1 class="text-2xl font-bold">Green Tea</h1>
                 <p>Creamer could be replaced by fresh milk</p>
