section 2 added with fully responsive

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 </head>
 <body class="manrope">
 <!-- ============================================================= Header Section starts here ===================================================== -->
-
     <header class=" grid sm:grid-cols-1 lg:grid-cols-2 xl:grid-cols-2 2xl:grid-cols-2 container mx-auto items-center text-center sm:text-center md:text-center lg:text-left xl:text-left 2xl:text-left p-9 ">
         <div class="header-details">
             <h1 class="text-6xl font-bold mb-2">It's good  <br>tea time at The <br> Tea House</h1>
@@ -35,14 +34,12 @@
             </div>
         </div>
     </header>
-
  <!-- ============================================================= Header Section ends here ====================================================== -->
 
 
 
 
-
-
+ <!-- ============================================================= section 1 starts here ============================================================ -->
    <section class="section container mx-auto text-center mt-9 p-4">
      <h1 class="text-6xl font-bold my-4">Our Featured Products</h1>
      <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
@@ -75,7 +72,31 @@
             
      </div>
    </section>
+ <!-- =============================================================== section 1 ends here ==========================================================  -->
 
    
+
+
+
+
+ <section class="section container mx-auto lg:mx-auto xl:flex justify-between">
+
+    <div class="section2-images max-w-[500px] grid grid-cols-2 grid-rows-3 gap-6 mx-auto p-6">
+       <div class=" bg-linear-to-r from-red-500 to-orange-500 opacity-20 rounded-2xl "></div>
+       <div class=" row-span-2 bg-amber-50 p-10 rounded-2xl"><img src="./images/fresh-2.png" alt="" class="mx-auto"></div>
+       <div class="bg-emerald-100 row-span-2 p-10 rounded-2xl"> <img src="./images/fresh-1.png" alt="" class="mx-auto"></div>
+       <div class=" bg-linear-to-r from-gray-300 to-white rounded-2xl"></div>
+    </div>
+
+    <div class="section2-details space-y-4 items-center text-center lg:text-center xl:text-left 2xl:text-left max-w-[700px] pt-20 mx-auto ">
+          <h1 class="text-6xl font-bold">Great Tea, Freshly Presented</h1>
+          <p>The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its custoers  because of good words of mouth and unique customized service orginated from Taiwan.</p>
+          <h1 class="text-2xl font-bold">Unique Tastec</h1>
+          <p>A Unique and different style from other teapots gives a luxurious and minimalist impression</p>
+          <h1 class="text-2xl font-bold">Premium Quality</h1>
+          <p>Premium Quality that makes tea more elegant and more durable when you use it.</p>
+    </div>
+
+ </section>
 </body>
 </html>
