--- a/index.html
+++ b/index.html
@@ -104,15 +104,16 @@
 
 
 
- <section class="section bg-linear-to-r from-orange-400 to-red-700 container mx-auto lg:flex lg:justify-between p-30 rounded-2xl">
-           <div class="sec3-details max-w-[500px]">
+ <section class="section bg-linear-to-r from-orange-400 to-red-700 container mx-auto text-center 2xl:text-left xl:text-left xl:flex xl:gap-30 xl:justify-between p-30 rounded-2xl md:text-center sm:text-center ">
+           <div class="sec3-details max-w-[500px] mb-[20px] lg:mx-auto lg:text-center md:mb-20 sm:mb-20">
                <h1 class="text-white text-6xl mb-7">Meet Our Super Clients</h1>
                <p class="text-white mb-8">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
                <button class="bg-white px-6 py-2 rounded-2xl"><span class="bg-linear-to-r from-orange-400 to-red-700 bg-clip-text text-transparent font-bold">Show All</span></button>
            </div>
-           <div class="sec3-card max-w-[500px] relative space-y-10">
+           <div class="sec3-card max-w-[500px] relative space-y-10 lg:mx-auto lg:mt-[30px]">
 
-                  <div class="bg-white p-9 absolute z-10 max-w-[500px]  -left-[100px] top-[120px] rounded-2xl"   >
+                  <div class="bg-white p-9 absolute z-10 max-w-[500px]  2xl:-left-[100px] 2xl: top-[120px] lg:left-0 lg:top-[140px] lg:w-[600px] md:top-[160px]
+                  rounded-2xl"   >
                      <p class="mb-10">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
                     <h1 class="text-2xl ">Ilham Yuda</h1>
                     <p>Businessman</p>
@@ -121,7 +122,7 @@
                     
                   </div>
 
-                  <div class="bg-white p-9 max-w-[500px] relative opacity-40 rounded-2xl" >
+                  <div class="bg-white p-9 max-w-[500px] relative opacity-40 rounded-2xl lg:w-[450px] lg:mx-auto xl:left-[80px] md:w-[450px] md:mx-auto sm:w-[380px] sm:mx-auto" >
                      <p class="mb-10">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
                     <h1 class="text-2xl ">Ilham Yuda</h1>
                     <p>Businessman</p>
@@ -129,7 +130,7 @@
                    
                   </div>
 
-                  <div class="bg-white p-9 max-w-[500px] relative opacity-40 rounded-2xl" >
+                  <div class="bg-white p-9 max-w-[500px] relative opacity-40 rounded-2xl lg:w-[450px] lg:mx-auto xl:left-[80px] md:w-[450px] md:mx-auto sm:w-[380px] sm:mx-auto" >
                      <p class="mb-10">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
                     <h1 class="text-2xl ">Ilham Yuda</h1>
                     <p>Businessman</p>
