--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
 
 <!-- ================================================================== section 2 starts here ======================================================= -->
- <section class="section container mx-auto lg:mx-auto xl:flex justify-between">
+ <section class="section container mx-auto lg:flex lg:mx-auto xl:flex justify-between">
 
     <div class="section2-images max-w-[500px] grid grid-cols-2 grid-rows-3 gap-6 mx-auto p-6">
        <div class=" bg-linear-to-r from-red-500 to-orange-500 opacity-20 rounded-2xl "></div>
@@ -88,7 +88,7 @@
        <div class=" bg-linear-to-r from-gray-300 to-white rounded-2xl"></div>
     </div>
 
-    <div class="section2-details space-y-4 items-center text-center lg:text-center xl:text-left 2xl:text-left max-w-[700px] pt-20 mx-auto ">
+    <div class="section2-details space-y-4 items-center text-center xl:text-left 2xl:text-left max-w-[700px] pt-20 mx-auto lg:w-[500px] lg:text-left lg:p-0">
           <h1 class="text-6xl font-bold">Great Tea, Freshly Presented</h1>
           <p>The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its custoers  because of good words of mouth and unique customized service orginated from Taiwan.</p>
           <h1 class="text-2xl font-bold">Unique Tastec</h1>
@@ -104,16 +104,15 @@
 
 
 
- <section class="section bg-linear-to-r from-orange-400 to-red-700 container mx-auto text-center 2xl:text-left xl:text-left xl:flex xl:gap-30 xl:justify-between p-30 rounded-2xl md:text-center sm:text-center ">
-           <div class="sec3-details max-w-[500px] mb-[20px] lg:mx-auto lg:text-center md:mb-20 sm:mb-20">
+ <section class="section bg-linear-to-r rounded-2xl from-orange-400 to-red-700 container mx-auto text-center p-9 lg:flex lg:text-left">
+           <div class="sec3-details mb-8 max-w-[500px] sm:mx-auto lg:w-[400px]">
                <h1 class="text-white text-6xl mb-7">Meet Our Super Clients</h1>
                <p class="text-white mb-8">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
                <button class="bg-white px-6 py-2 rounded-2xl"><span class="bg-linear-to-r from-orange-400 to-red-700 bg-clip-text text-transparent font-bold">Show All</span></button>
            </div>
-           <div class="sec3-card max-w-[500px] relative space-y-10 lg:mx-auto lg:mt-[30px]">
+           <div class="sec3-card max-w-[500px] relative space-y-10 lg:mx-auto lg:mt-[30px] sm:mx-auto ">
 
-                  <div class="bg-white p-9 absolute z-10 max-w-[500px]  2xl:-left-[100px] 2xl: top-[120px] lg:left-0 lg:top-[140px] lg:w-[600px] md:top-[160px]
-                  rounded-2xl"   >
+                  <div class="bg-white absolute z-10 max-w-[500px] top-[120px] sm:top-[140px] md:top-[100px] rounded-2xl p-5 mx-auto" >
                      <p class="mb-10">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
                     <h1 class="text-2xl ">Ilham Yuda</h1>
                     <p>Businessman</p>
@@ -122,7 +121,7 @@
                     
                   </div>
 
-                  <div class="bg-white p-9 max-w-[500px] relative opacity-40 rounded-2xl lg:w-[450px] lg:mx-auto xl:left-[80px] md:w-[450px] md:mx-auto sm:w-[380px] sm:mx-auto" >
+                  <div class="bg-white max-w-[500px] relative w-[400px] opacity-40 rounded-2xl lg:w-[450px] lg:mx-auto xl:left-[80px] md:w-[450px] md:mx-auto sm:w-[380px] sm:mx-auto p-2 mx-auto lg:left-[50px]" >
                      <p class="mb-10">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
                     <h1 class="text-2xl ">Ilham Yuda</h1>
                     <p>Businessman</p>
@@ -130,7 +129,7 @@
                    
                   </div>
 
-                  <div class="bg-white p-9 max-w-[500px] relative opacity-40 rounded-2xl lg:w-[450px] lg:mx-auto xl:left-[80px] md:w-[450px] md:mx-auto sm:w-[380px] sm:mx-auto" >
+                  <div class="bg-white max-w-[500px] relative w-[400px] opacity-40 rounded-2xl lg:w-[450px] lg:mx-auto xl:left-[80px] md:w-[450px] md:mx-auto sm:w-[380px] sm:mx-auto p-2 mx-auto lg:left-[50px]" >
                      <p class="mb-10">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
                     <h1 class="text-2xl ">Ilham Yuda</h1>
                     <p>Businessman</p>
