--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
 
 
-
+<!-- =================================================================== section 3 starts here ====================================================== -->
  <section class="section bg-linear-to-r rounded-2xl from-orange-400 to-red-700 container mx-auto text-center p-9 lg:flex lg:text-left">
            <div class="sec3-details mb-8 max-w-[500px] sm:mx-auto lg:w-[400px]">
                <h1 class="text-white text-6xl mb-7">Meet Our Super Clients</h1>
@@ -140,6 +140,42 @@
 
            </div>
  </section>
+ <!-- ================================================================== section 3 ends here ======================================================== -->
+
+<section class="section container mx-auto text-center mt-20 space-y-3.5">
+      <h1 class="text-6xl font-bold">News & Events</h1>
+      <p class="max-w-[800px] mx-auto">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+
+      <div class="cards lg:flex gap-5 xl:flex xxl:flex">
+
+        <div class="card border-4 border-gray-200 w-90 rounded-2xl p-4 mx-auto mt-4 space-y-5">
+            <img src="./images/news-1.png" alt="" class="mx-auto">
+            <p>Feb 05, 2027</p>
+            <h1 class="text-xl font-bold">Collecting 8 points for discount</h1>
+            <p>There are many variations of passages of Lorem Ipsum available.</p>
+            <h1 class="font-bold">Learn More</h1>
+        </div>
+
+        <div class="card border-4 border-gray-200 w-90 rounded-2xl p-4 mx-auto mt-4 space-y-5">
+            <img src="./images/news-2.png" alt="" class="mx-auto">
+            <p>Feb 05, 2027</p>
+            <h1 class="text-xl font-bold">Collecting 8 points for discount</h1>
+            <p>There are many variations of passages of Lorem Ipsum available.</p>
+            <h1 class="font-bold">Learn More</h1>
+        </div>
+
+        <div class="card border-4 border-gray-200 w-90 rounded-2xl p-4 mx-auto mt-4 space-y-5">
+            <img src="./images/news-3.png" alt="" class="mx-auto">
+            <p>Feb 05, 2027</p>
+            <h1 class="text-xl font-bold">Collecting 8 points for discount</h1>
+            <p>There are many variations of passages of Lorem Ipsum available.</p>
+            <h1 class="font-bold">Learn More</h1>
+        </div>
+
+      </div>
+</section>
+
+
 </body>
 
 
