--- a/index.html
+++ b/index.html
@@ -142,6 +142,8 @@
  </section>
  <!-- ================================================================== section 3 ends here ======================================================== -->
 
+
+ <!-- =================================================================== section 4 starts here ===================================================== -->
 <section class="section container mx-auto text-center mt-20 space-y-3.5">
       <h1 class="text-6xl font-bold">News & Events</h1>
       <p class="max-w-[800px] mx-auto">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
@@ -174,6 +176,8 @@
 
       </div>
 </section>
+<!-- ===================================================================== section 4 ends here ====================================================== -->
+
 
 
 </body>
