css link updated

--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
     <title>Tea House</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
      <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
 <body class="manrope">
+
+    
 <!-- ============================================================= Header Section starts here ===================================================== -->
     <header class=" grid sm:grid-cols-1 lg:grid-cols-2 xl:grid-cols-2 2xl:grid-cols-2 container mx-auto items-center text-center sm:text-center md:text-center lg:text-left xl:text-left 2xl:text-left p-9 ">
         <div class="header-details">
