a part of footer has added

--- a/index.html
+++ b/index.html
@@ -147,16 +147,16 @@
 
 
 
-
-<footer class="footer container mx-auto ">
-    <div class=" max-w-[1400px] sm:flex justify-between items-center space-y-[50px]" >
-        <img src="./images/cup.png" alt="" class="mx-auto">
-        <div class="sm:flex gap-4.5 items-center space-y-10">
-            <p class="max-w-[500px] text-center mx-auto">Ready to get strated?</p>
-         <div class="text-center">
-               <button class="bg-linear-to-r from-orange-400 to-red-500 px-4 py-2 " >Get Started</button>
-         </div>
-        </div>
+<footer class="footer container mx-auto mt-9 bg-[#ffe4d3] p-10 2xl:p-30">
+    <div class=" 2xl:flex 2xl:justify-between xl:flex xl:justify-between lg:flex lg:justify-between md:flex md:justify-between sm:flex sm:justify-between">
+     <div>
+          <img src="./images/cup.png" alt="" class="mx-auto">
+     </div> 
+     <div class=" 2xl:flex items-center gap-5 xl:flex lg:flex mx-auto"> 
+        <p class="text-center">Ready to get strated?</p>
+       <div class="text-center"> <button class="bg-linear-to-r from-orange-400 to-red-500 px-4 py-3 text-white rounded-2xl " >Get started</button></div>
+    </div>
+       
     </div>
 </footer>
 
