--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+        integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Tea House</title>
     <link rel="stylesheet" href="./style.css">
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
@@ -166,10 +169,10 @@
 
 
 
-    <footer class="footer container mx-auto p-30 space-y-9 bg-[#f5d5c0] mt-20 rounded-2xl">
+    <footer class="footer container mx-auto p-30 space-y-20 bg-[#f5d5c0] mt-20 rounded-2xl">
 
         <div
-            class="2xl:flex 2xl:justify-between items-center xl:flex xl:justify-between lg:flex lg:justify-between md:flex md:justify-between">
+            class="2xl:flex 2xl:justify-between items-center xl:flex xl:justify-between lg:flex lg:justify-between md:flex md:justify-between ">
             <img src="./images/cup.png" alt="" class="sm:mx-auto mx-auto">
 
             <div class=" 2xl:flex gap-5 items-center xl:flex lg:flex sm:mx-auto mx-auto">
@@ -181,8 +184,8 @@
 
         </div>
 
-        <div class="flex justify-between">
-            <div  class="space-y-3.5">
+        <div class="2xl:flex justify-between xl:flex lg:flex md:flex md:flex-wrap space-y-16 sm:flex sm:flex-wrap sm:justify-between text-center 2xl:text-left xl:text-left lg:text-left  " >
+            <div class="space-y-3.5 mx-auto">
                 <h2 class="text-2xl">Quick Links</h2>
                 <ul>
                     <li><a href="">Home</a></li>
@@ -191,7 +194,7 @@
                     <li><a href="">Privacy Policy</a></li>
                 </ul>
             </div>
-            <div class="space-y-3.5">
+            <div class="space-y-3.5 mx-auto">
                 <h2 class="text-2xl">Our Services</h2>
                 <ul>
                     <li>Life Insurance</li>
@@ -200,7 +203,7 @@
                     <li>House Insurance</li>
                 </ul>
             </div>
-            <div class="space-y-3.5">
+            <div class="space-y-3.5 mx-auto">
                 <h2 class="text-2xl">Helps</h2>
                 <ul>
                     <li><a href="">Help</a></li>
@@ -208,15 +211,23 @@
                 </ul>
             </div>
 
-            <div>
+            <div class="space-y-3 sm:mx-auto mx-auto w-auto">
                 <h1 class="text-2xl">Subscribe to our <br> Newslater</h1>
+                <form class="flex max-w-700px]">
+                    <input type="email" placeholder="Your email" class=" border-b-2 border-[#b8adad] py-4 mx-auto">
+                    <button><span class="bg-linear-to-r from-orange-400 to-red-500 rounded-full p-1 text-white" ><i class="fa-solid fa-chevron-right"></i></span></button>
+                </form>
 
 
             </div>
 
 
-           
 
+
+        </div>
+
+        <div>
+            <p class="text-center">© 2027 UIDesign.to - All rights reserved. </p>
         </div>
 
 
