--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
         </div>
     </section>
-    <!-- =============================================================== section 1 ends here ==========================================================  -->
+    <!-- =============================================================== section 1 ends here =======================================================  -->
 
 
 
@@ -125,9 +125,72 @@
 
 
 
+
+
     <!-- =================================================================== section 3 starts here ================================================== -->
+    <section
+        class="container mx-auto bg-linear-to-r from-orange-400 to-red-500 p-20 text-white rounded-2xl 2xl:flex 2xl:justify-between items-center">
+        <div class="space-y-4 w-[500px]">
+            <h1 class="text-4xl font-bold">Meet Our Super <br> Clients</h1>
+            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration
+                in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+            <button class=" bg-white font-bold px-3 py-2 rounded-2xl">
+                <span class=" bg-linear-to-r from-orange-400 to-red-500 bg-clip-text text-transparent">Show All</span>
+            </button>
+        </div>
+
+        <div class="2xl:relative">
+
+            <div class="card w-[500px] bg-white text-black p-15 relative rounded-2xl ">
+                <img src="./images/client.png" alt=""
+                    class="absolute -top-[25px] -left-[25px] bg-white rounded-full p-2">
+                <p>We are providing the best and suitable home insurance services for the people who are interested to
+                    treatment</p>
+                <div class="flex justify-between">
+                    <div>
+                        <h1>Ilham Yuda</h1>
+                        <p>Businessman</p>
+                    </div>
+                    <img src="./images/circles.png" alt="">
+                </div>
+            </div>
+            <div class="card w-[500px] bg-black text-black p-15 relative rounded-2xl  2xl:absolute -left-[40px] top-0 ">
+                <img src="./images/client.png" alt=""
+                    class="absolute -top-[25px] -left-[25px] bg-white rounded-full p-2">
+                <p>We are providing the best and suitable home insurance services for the people who are interested to
+                    treatment</p>
+                <div class="flex justify-between">
+                    <div>
+                        <h1>Ilham Yuda</h1>
+                        <p>Businessman</p>
+                    </div>
+                    <img src="./images/circles.png" alt="">
+                </div>
+            </div>
+            <div class="card w-[500px] bg-white text-black p-15 relative rounded-2xl">
+                <img src="./images/client.png" alt=""
+                    class="absolute -top-[25px] -left-[25px] bg-white rounded-full p-2">
+                <p>We are providing the best and suitable home insurance services for the people who are interested to
+                    treatment</p>
+                <div class="flex justify-between">
+                    <div>
+                        <h1>Ilham Yuda</h1>
+                        <p>Businessman</p>
+                    </div>
+                    <img src="./images/circles.png" alt="">
+                </div>
+            </div>
+
+        </div>
+
+    </section>
+
+
 
     <!-- ================================================================== section 3 ends here ===================================================== -->
+
+
+
 
 
     <!-- =================================================================== section 4 starts here ===================================================== -->
@@ -169,6 +232,9 @@
 
 
 
+
+
+    <!-- ====================================================================== footer starts here ================================================== -->
     <footer class="footer container mx-auto p-30 space-y-20 bg-[#f5d5c0] mt-20 rounded-2xl">
 
         <div
@@ -184,7 +250,8 @@
 
         </div>
 
-        <div class="2xl:flex justify-between xl:flex lg:flex md:flex md:flex-wrap space-y-16 sm:flex sm:flex-wrap sm:justify-between text-center 2xl:text-left xl:text-left lg:text-left  " >
+        <div
+            class="2xl:flex justify-between xl:flex lg:flex md:flex md:flex-wrap space-y-16 sm:flex sm:flex-wrap sm:justify-between text-center 2xl:text-left xl:text-left lg:text-left  ">
             <div class="space-y-3.5 mx-auto">
                 <h2 class="text-2xl">Quick Links</h2>
                 <ul>
@@ -215,7 +282,8 @@
                 <h1 class="text-2xl">Subscribe to our <br> Newslater</h1>
                 <form class="flex max-w-700px]">
                     <input type="email" placeholder="Your email" class=" border-b-2 border-[#b8adad] py-4 mx-auto">
-                    <button><span class="bg-linear-to-r from-orange-400 to-red-500 rounded-full p-1 text-white" ><i class="fa-solid fa-chevron-right"></i></span></button>
+                    <button><span class="bg-linear-to-r from-orange-400 to-red-500 rounded-full p-1 text-white"><i
+                                class="fa-solid fa-chevron-right"></i></span></button>
                 </form>
 
 
@@ -233,7 +301,7 @@
 
 
     </footer>
-
+    <!-- ======================================================================= footer ends here =================================================== -->
 
 </body>
 
