section 3 is completed for 2xl devices

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body class="manrope">
 
 
-    <!-- ============================================================= Header Section starts here ===================================================== -->
+    <!-- =========================================================== Header Section starts here ===================================================== -->
     <header
         class=" grid sm:grid-cols-1 lg:grid-cols-2 xl:grid-cols-2 2xl:grid-cols-2 container mx-auto items-center text-center sm:text-center md:text-center lg:text-left xl:text-left 2xl:text-left p-9 ">
         <div class="header-details">
@@ -44,7 +44,7 @@
             </div>
         </div>
     </header>
-    <!-- ============================================================= Header Section ends here ====================================================== -->
+    <!-- =========================================================== Header Section ends here ====================================================== -->
 
 
 
@@ -129,7 +129,7 @@
 
     <!-- =================================================================== section 3 starts here ================================================== -->
     <section
-        class="container mx-auto bg-linear-to-r from-orange-400 to-red-500 p-20 text-white rounded-2xl 2xl:flex 2xl:justify-between items-center">
+        class="container mx-auto my-20 bg-linear-to-r from-orange-400 to-red-500 p-20 text-white rounded-2xl 2xl:flex 2xl:justify-between items-center xl:flex xl:justify-between">
         <div class="space-y-4 w-[500px]">
             <h1 class="text-4xl font-bold">Meet Our Super <br> Clients</h1>
             <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration
@@ -139,11 +139,31 @@
             </button>
         </div>
 
-        <div class="2xl:relative">
 
-            <div class="card w-[500px] bg-white text-black p-15 relative rounded-2xl ">
+
+
+        <div class=" 2xl:relative space-y-[35px]">
+ 
+
+            <div class="card w-[500px] bg-white text-black p-15 2xl:relative rounded-2xl 2xl:opacity-40">
                 <img src="./images/client.png" alt=""
                     class="absolute -top-[25px] -left-[25px] bg-white rounded-full p-2">
+                <p>We are providing the best and suitable home insurance services for the people who are interested to
+                    treatment</p>
+                <div class="flex justify-between">
+                    <div>
+                        <h1>Ilham Yuda</h1>
+                        <p>Businessman</p>
+                    </div>
+                    <!-- <img src="./images/circles.png" alt="" > -->
+                </div>
+            </div>
+
+
+
+            <div class="card w-[500px] bg-white space-y-4.5 text-black p-15 z-10 rounded-2xl 2xl:absolute 2xl:top-[150px] 2xl:-left-30">
+                <img src="./images/client.png" alt=""
+                    class="2xl:absolute 2xl:-top-[25px] 2xl:-left-[25px] bg-white rounded-full p-2">
                 <p>We are providing the best and suitable home insurance services for the people who are interested to
                     treatment</p>
                 <div class="flex justify-between">
@@ -154,7 +174,10 @@
                     <img src="./images/circles.png" alt="">
                 </div>
             </div>
-            <div class="card w-[500px] bg-black text-black p-15 relative rounded-2xl  2xl:absolute -left-[40px] top-0 ">
+
+
+
+            <div class="card w-[500px] bg-white text-black p-15 relative rounded-2xl opacity-40">
                 <img src="./images/client.png" alt=""
                     class="absolute -top-[25px] -left-[25px] bg-white rounded-full p-2">
                 <p>We are providing the best and suitable home insurance services for the people who are interested to
@@ -164,28 +187,18 @@
                         <h1>Ilham Yuda</h1>
                         <p>Businessman</p>
                     </div>
-                    <img src="./images/circles.png" alt="">
-                </div>
-            </div>
-            <div class="card w-[500px] bg-white text-black p-15 relative rounded-2xl">
-                <img src="./images/client.png" alt=""
-                    class="absolute -top-[25px] -left-[25px] bg-white rounded-full p-2">
-                <p>We are providing the best and suitable home insurance services for the people who are interested to
-                    treatment</p>
-                <div class="flex justify-between">
-                    <div>
-                        <h1>Ilham Yuda</h1>
-                        <p>Businessman</p>
-                    </div>
-                    <img src="./images/circles.png" alt="">
+                    <!-- <img src="./images/circles.png" alt=""> -->
                 </div>
             </div>
 
         </div>
 
+
+
+
+
+
     </section>
-
-
 
     <!-- ================================================================== section 3 ends here ===================================================== -->
 
@@ -193,7 +206,7 @@
 
 
 
-    <!-- =================================================================== section 4 starts here ===================================================== -->
+    <!-- ================================================================ section 4 starts here ===================================================== -->
     <section class="section container mx-auto text-center mt-20 space-y-3.5">
         <h1 class="text-6xl font-bold">News & Events</h1>
         <p class="max-w-[800px] mx-auto">There are many variations of passages of Lorem Ipsum available, but the
