section 3 is completed for mobile devices

--- a/index.html
+++ b/index.html
@@ -128,7 +128,55 @@
 
 
     <!-- =================================================================== section 3 starts here ================================================== -->
-   
+
+    <section
+        class="section container  mx-auto bg-linear-to-r from-orange-400 to-red-500 text-center text-white p-5 space-y-3">
+
+        <div class="space-y-[20px]">
+            <h1 class="text-2xl  font-bold ">Meet Our Super Clients</h1>
+            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration
+                in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+            <button class="bg-white px-3 py-2 rounded-2xl"><span
+                    class="bg-linear-to-r from-orange-400 to-red-500 bg-clip-text text-transparent font-bold">Show
+                    All</span></button>
+        </div>
+
+        <div class="cards space-y-1 relative">
+
+            <div class="card text-left bg-white text-black p-10 rounded-2xl space-y-2 relative mx-auto w-[100%] opacity-40">
+                <img src="./images/client.png" alt=""
+                    class="absolute -top-[20px] -left-[20px] bg-white rounded-full p-1 ">
+                <p>We are providing the best and suitable home insurance services for the people who are interested to
+                    treatment</p>
+                <h3>Ilham Yuda</h3>
+                <p>Businessman</p>
+                <!-- <img src="./images/circles.png" alt="" class="absolute bottom-8 right-8"> -->
+            </div>
+
+            <div class="card text-left bg-white text-black p-10 z-10 rounded-2xl space-y-2 absolute mx-auto w-[100%] top-40">
+                <img src="./images/client.png" alt=""
+                    class="absolute -top-[20px] -left-[20px] bg-white rounded-full p-1 ">
+                <p>We are providing the best and suitable home insurance services for the people who are interested to
+                    treatment</p>
+                <h3>Ilham Yuda</h3>
+                <p>Businessman</p>
+                <img src="./images/circles.png" alt="" class="absolute bottom-8 right-8">
+            </div>
+
+            <div class="card text-left bg-white text-black p-10 rounded-2xl space-y-2 relative mx-auto w-[100%] opacity-40">
+                <img src="./images/client.png" alt=""
+                    class="absolute -top-[20px] -left-[20px] bg-white rounded-full p-1 ">
+                <p>We are providing the best and suitable home insurance services for the people who are interested to
+                    treatment</p>
+                <h3>Ilham Yuda</h3>
+                <p>Businessman</p>
+                <!-- <img src="./images/circles.png" alt="" class="absolute bottom-8 right-8"> -->
+            </div>
+
+        </div>
+
+    </section>
+
 
     <!-- ================================================================== section 3 ends here ===================================================== -->
 
