section 3 is completed for mobile devices

--- a/index.html
+++ b/index.html
@@ -130,9 +130,9 @@
     <!-- =================================================================== section 3 starts here ================================================== -->
 
     <section
-        class="section container  mx-auto bg-linear-to-r from-orange-400 to-red-500 text-center text-white p-5 space-y-3">
+        class="section container  mx-auto bg-linear-to-r from-orange-400 to-red-500 text-center text-white p-1 space-y-3 md:p-9 lg:p-30 xl:flex justify-between ">
 
-        <div class="space-y-[20px]">
+        <div class="space-y-[20px] max-w-[300px] lg:text-left">
             <h1 class="text-2xl  font-bold ">Meet Our Super Clients</h1>
             <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration
                 in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
@@ -141,9 +141,9 @@
                     All</span></button>
         </div>
 
-        <div class="cards space-y-1 relative">
+        <div class="cards space-y-1 relative max-w-[500px]">
 
-            <div class="card text-left bg-white text-black p-10 rounded-2xl space-y-2 relative mx-auto w-[100%] opacity-40">
+            <div class="card text-left max-w-[450px] bg-white text-black p-10 rounded-2xl space-y-2 relative mx-auto  opacity-40 sm:w-[560px] md:w-[650px]">
                 <img src="./images/client.png" alt=""
                     class="absolute -top-[20px] -left-[20px] bg-white rounded-full p-1 ">
                 <p>We are providing the best and suitable home insurance services for the people who are interested to
@@ -153,7 +153,7 @@
                 <!-- <img src="./images/circles.png" alt="" class="absolute bottom-8 right-8"> -->
             </div>
 
-            <div class="card text-left bg-white text-black p-10 z-10 rounded-2xl space-y-2 absolute mx-auto w-[100%] top-40">
+            <div class="card text-left bg-white text-black p-10 z-10 rounded-2xl space-y-2 absolute mx-auto w-[100%] top-30">
                 <img src="./images/client.png" alt=""
                     class="absolute -top-[20px] -left-[20px] bg-white rounded-full p-1 ">
                 <p>We are providing the best and suitable home insurance services for the people who are interested to
@@ -163,7 +163,7 @@
                 <img src="./images/circles.png" alt="" class="absolute bottom-8 right-8">
             </div>
 
-            <div class="card text-left bg-white text-black p-10 rounded-2xl space-y-2 relative mx-auto w-[100%] opacity-40">
+            <div class="card text-left bg-white text-black p-10 rounded-2xl space-y-2 relative mx-auto  opacity-40 sm:w-[560px] md:w-[650px]">
                 <img src="./images/client.png" alt=""
                     class="absolute -top-[20px] -left-[20px] bg-white rounded-full p-1 ">
                 <p>We are providing the best and suitable home insurance services for the people who are interested to
