--- a/index.html
+++ b/index.html
@@ -130,10 +130,10 @@
     <!-- =================================================================== section 3 starts here ================================================== -->
 
     <section
-        class="section container  mx-auto bg-linear-to-r from-orange-400 to-red-500 text-center text-white p-1 space-y-3 md:p-9 lg:p-30 xl:flex justify-between ">
+        class="section container  mx-auto my-9 rounded-2xl bg-linear-to-r from-orange-400 to-red-500 text-center text-white p-5 space-y-3 md:p-9 lg:p-30 xl:flex justify-between  xl:items-center">
 
-        <div class="space-y-[20px] max-w-[300px] lg:text-left">
-            <h1 class="text-2xl  font-bold ">Meet Our Super Clients</h1>
+        <div class="space-y-[20px] text-center mx-auto max-w-[300px] xl:text-left">
+            <h1 class="text-4xl  font-bold ">Meet Our Super Clients</h1>
             <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration
                 in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
             <button class="bg-white px-3 py-2 rounded-2xl"><span
@@ -141,9 +141,10 @@
                     All</span></button>
         </div>
 
-        <div class="cards space-y-1 relative max-w-[500px]">
+        <div class="cards space-y-5 p-1 relative max-w-[500px] mx-auto">
 
-            <div class="card text-left max-w-[450px] bg-white text-black p-10 rounded-2xl space-y-2 relative mx-auto  opacity-40 sm:w-[560px] md:w-[650px]">
+            <div
+                class="card text-left max-w-[450px] bg-white text-black p-10 rounded-2xl space-y-2 relative mx-auto  opacity-40  xl:left-[100px]">
                 <img src="./images/client.png" alt=""
                     class="absolute -top-[20px] -left-[20px] bg-white rounded-full p-1 ">
                 <p>We are providing the best and suitable home insurance services for the people who are interested to
@@ -153,7 +154,8 @@
                 <!-- <img src="./images/circles.png" alt="" class="absolute bottom-8 right-8"> -->
             </div>
 
-            <div class="card text-left bg-white text-black p-10 z-10 rounded-2xl space-y-2 absolute mx-auto w-[100%] top-30">
+            <div
+                class="card text-left  bg-white text-black p-10 z-10 rounded-2xl space-y-2 absolute mx-auto w-[100%] top-30">
                 <img src="./images/client.png" alt=""
                     class="absolute -top-[20px] -left-[20px] bg-white rounded-full p-1 ">
                 <p>We are providing the best and suitable home insurance services for the people who are interested to
@@ -163,7 +165,8 @@
                 <img src="./images/circles.png" alt="" class="absolute bottom-8 right-8">
             </div>
 
-            <div class="card text-left bg-white text-black p-10 rounded-2xl space-y-2 relative mx-auto  opacity-40 sm:w-[560px] md:w-[650px]">
+            <div
+                class="card text-left max-w-[450px] bg-white text-black p-10 rounded-2xl space-y-2 relative mx-auto  opacity-40 xl:left-[100px]">
                 <img src="./images/client.png" alt=""
                     class="absolute -top-[20px] -left-[20px] bg-white rounded-full p-1 ">
                 <p>We are providing the best and suitable home insurance services for the people who are interested to
