--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
 
 
     <!-- ================================================================== section 2 starts here =================================================== -->
-    <section class="section container mx-auto lg:flex lg:mx-auto xl:flex justify-between">
+    <section class="section container mx-auto lg:flex lg:mx-auto xl:flex gap-1 max-w-[1200px]">
 
-        <div class="section2-images max-w-[500px] grid grid-cols-2 grid-rows-3 gap-6 mx-auto p-6">
+        <div class="section2-images max-w-[800px] grid grid-cols-2 grid-rows-3 gap-6 mx-auto p-6">
             <div class=" bg-linear-to-r from-red-500 to-orange-500 opacity-20 rounded-2xl "></div>
             <div class=" row-span-2 bg-amber-50 p-10 rounded-2xl"><img src="./images/fresh-2.png" alt=""
                     class="mx-auto"></div>
@@ -107,7 +107,7 @@
         </div>
 
         <div
-            class="section2-details space-y-4 items-center text-center xl:text-left 2xl:text-left max-w-[700px] pt-20 mx-auto lg:w-[500px] lg:text-left lg:p-0">
+            class="section2-details space-y-4 items-center text-center xl:text-left 2xl:text-left max-w-[800px] pt-20 mx-auto lg:w-[500px] lg:text-left lg:p-0">
             <h1 class="text-6xl font-bold">Great Tea, Freshly Presented</h1>
             <p>The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It
                 represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply
@@ -128,7 +128,6 @@
 
 
     <!-- =================================================================== section 3 starts here ================================================== -->
-
     <section
         class="section container  mx-auto my-9 rounded-2xl bg-linear-to-r from-orange-400 to-red-500 text-center text-white p-5 space-y-3 md:p-9 lg:p-30 xl:flex justify-between  xl:items-center">
 
@@ -179,8 +178,6 @@
         </div>
 
     </section>
-
-
     <!-- ================================================================== section 3 ends here ===================================================== -->
 
 
