--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <!-- ============================================================= section 1 starts here ======================================================== -->
     <section class="section container mx-auto text-center mt-9 p-4">
         <h1 class="text-6xl font-bold my-4">Our Featured Products</h1>
-        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in
+        <p class="max-w-[1000px] mx-auto">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in
             some form, by injected humour, or randomised words which don't look even slightly believable. </p>
 
         <div
